Add link to GitHub repo

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         <div class="container">
           <span class="brand" href="#">GCode Viewer</span>
           <ul class="nav">
-            <li><a href="#help">Open File</a></li>
-            <li><a href="#help">Help</a></li>
-            <li><a href="#help">GitHub</a></li>
+            <li><a href="https://github.com/joewalnes/gcode-viewer" target="_blank">Code on GitHub</a></li>
           </ul>
           <ul class="nav pull-right">
-            <li><a href="http://twitter.com/joewalnes">@joewalnes</a></li>
+            <li><a href="http://twitter.com/joewalnes" target="_blank">@joewalnes</a></li>
           </ul>
         </div>
       </div>
