--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         right: 0;
         bottom: 0;
         top: 40px;
+        background-color: #000000;
       }
     </style>
     <script src="lib/modernizr.custom.93389.js"></script>
