--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="modal-body">
         <p>This is a viewer for <a href="http://en.wikipedia.org/wiki/G-code" target="_new">GCode</a>
-        files. GCode files are set of commands sent to CNC machines such as a
+        files, which contain commands sent to a CNC machine such as a
         <a href="http://reprap.org/" target="_blank">RepRap</a> or
         <a href="http://www.makerbot.com/" target="_blank">MakerBot</a> 3D printer.</p>
 
