--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
     <script src="lib/bootstrap-modal.js"></script>
     <script src="lib/Three.js"></script>
     <script src="viewer.js"></script>
+
+    <!-- Google Analytics code for http://gcode.joewalnes.com/ -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30512323-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+
   </head>
   <body>
 
@@ -85,6 +98,20 @@
         <a class="btn btn-primary" data-dismiss="modal">OK</a>
       </div>
     </div>
+
+    <!-- GoSquared analytics code. Only useful on http://gcode.joewalnes.com/ -->
+    <script type="text/javascript">
+      var GoSquared={};
+      GoSquared.acct = "GSN-954543-H";
+      (function(w){
+        function gs(){
+          w._gstc_lt=+(new Date); var d=document;
+          var g = d.createElement("script"); g.type = "text/javascript"; g.async = true; g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+          var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(g, s);
+        }
+        w.addEventListener?w.addEventListener("load",gs,false):w.attachEvent("onload",gs);
+      })(window);
+    </script>
 
   </body>
 </html>
