Use correct GoSquared analytics code

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- GoSquared analytics code. Only useful on http://gcode.joewalnes.com/ -->
     <script type="text/javascript">
       var GoSquared={};
-      GoSquared.acct = "GSN-954543-H";
+      GoSquared.acct = "GSN-821250-X";
       (function(w){
         function gs(){
           w._gstc_lt=+(new Date); var d=document;
