Broke big code blob into multiple files (no code body changes).

--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
         background-color: #000000;
       }
     </style>
+    <!-- 3rd party libs -->
     <script src="lib/modernizr.custom.93389.js"></script>
     <script src="lib/jquery-1.7.1.min.js"></script>
     <script src="lib/bootstrap-modal.js"></script>
     <script src="lib/Three.js"></script>
-    <script src="viewer.js"></script>
+    <!-- Custom code -->
+    <script src="gcode-parser.js"></script>
+    <script src="gcode-model.js"></script>
+    <script src="renderer.js"></script>
+    <script src="ui.js"></script>
 
     <!-- Google Analytics code for http://gcode.joewalnes.com/ -->
     <script type="text/javascript">
