Show movements as blue lines

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="lib/modernizr.custom.93389.js"></script>
     <script src="lib/jquery-1.7.1.min.js"></script>
     <script src="lib/bootstrap-modal.js"></script>
+    <script src="lib/sugar-1.2.4.min.js"></script>
     <script src="lib/Three.js"></script>
     <!-- Custom code -->
     <script src="gcode-parser.js"></script>
